adicionei uma pasta com imagens ao projeto; distribui o número de cartas válido de forma aleatória

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -40,6 +40,12 @@ h1 {
     margin: 5px;
     border-radius: 5px;
 }
+
+.carta img {
+    height: 100px;
+    width: 100px;
+}
+
 @media (max-width: 550px) {
 	.titulo {
         font-size: 36px;
