Implementei o alerta de vitória; Centralizei as imagens

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -39,11 +39,25 @@ h1 {
     background-color: #a7e9af;
     margin: 5px;
     border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .carta img {
     height: 100px;
     width: 100px;
+}
+
+.rotacao-para-cima {
+    transition: all .5s;
+    transform-style: preserve-3d;
+    transform: rotateY(180deg);
+}
+.rotacao-para-baixo {
+    transition: all .5s;
+    transform-style: preserve-3d;
+    transform: rotateY(-180deg);
 }
 
 @media (max-width: 550px) {
